[package]
name = "myucel"
version = "1.0.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
reqwest = { version = "0.12.9", features = ["json", "native-tls-vendored"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
spinners = "4.1.1"
tokio = { version = "1.41.1", features = ["full"] }
urlencoding = "2.1.3"
